# agentic_exam_intelligence_engine

./: .env.example  .gitignore  README.md  pyproject.toml
agents/coral_gemini_exam_agent/: README.md  agent.py  system_prompt.md
coral_data/: exam_chapter_links.parquet  exam_questions.parquet  exam_textbook_chunks.parquet  ingestion_embeddings.parquet  ingestion_pdf_chunks.parquet  ingestion_pdf_pages.parquet  ingestion_sources.parquet
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
sources/community/exam_enriched/: README.md  manifest.yaml
sources/community/exam_raw/: README.md  manifest.yaml
src/exam_intelligence/: __init__.py  cli.py  config.py  contracts.py  demo_contracts.py  schema.py
src/exam_intelligence/api/: __init__.py  app.py  ingest.py  routes.py  server.py
src/exam_intelligence/clients/: __init__.py  document_intelligence.py  embeddings.py  llm_client.py
src/exam_intelligence/core/: __init__.py  contracts.py  enrich.py  pipeline.py
src/exam_intelligence/db/: __init__.py  db.py  schema.py
src/exam_intelligence/services/: coral_agent.py
src/exam_intelligence/workers/: __init__.py  build_faiss_index.py  embed_worker.py  enqueuer.py  export_worker.py  llm_worker.py  ocr_worker.py  runner.py
